@startuml Combat

title Diagramme de Classes - Système de Combat

abstract class Combat {
    +joueur1 : Joueur
    +joueur2 : Joueur
    +terrain : Terrain

    +Combat(Joueur, Joueur)
    #{abstract} lancer() : void
    #{abstract} executerTour() : void
    #{abstract} afficherMessage(String) : void
    #{abstract} gereChoixAction(Joueur) : Object
    +selectionnerMonstre(Joueur) : void
    +selectionnerAttaque(Joueur) : void
    +selectionnerObjet(Joueur) : void
    +choixAttaque(Joueur) : Attaque
    +utiliseObjet(Joueur) : Objet
    +changeMonstre(Joueur) : Monstre
    +gereOrdreExecutionActions(Object, Object) : void
    +getAWinner() : Joueur
}

class CombatLocalTerminal extends Combat {
    +CombatLocalTerminal(Joueur, Joueur)
}

class CombatBot extends Combat {
    +CombatBot(Joueur, Bot)
}

class CombatEnLigne extends Combat {
    +CombatEnLigne(Joueur, Joueur)
}

class Joueur {
    -nomJoueur : String
    +Joueur(String)
    +getNomJoueur() : String
    +sontMonstresMorts() : boolean
}

class Bot extends Joueur {
    +Bot(String)
    +choisirActionAutomatiquement(Monstre) : Attaque
}

class Terrain {
    -nomTerrain : String
    +Terrain(String, StatutTerrain)
}

class CombatLogger <<utility>> {
    +{static} setGuiCallback(Consumer<String>) : void
    +{static} info(String) : void
    +{static} log(String) : void
    +{static} logDebutCombat(Joueur, Joueur) : void
}

' Relations
Combat --> "2" Joueur : joueur1, joueur2
Combat --> "1" Terrain : terrain
Bot --|> Joueur

note top of Combat
  Template Method Pattern :
  Les méthodes abstraites sont
  implémentées différemment selon
  le mode de combat (Terminal, Bot, Online)
end note

@enduml
